--- a/stockdemo.ipynb
+++ b/stockdemo.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "start = time.time()\n",
     "model.compile(loss='mse', optimizer='rmsprop')\n",
-    "print 'compilation time : ', time.time() - start"
+    "print ('compilation time : ', time.time() - start)"
    ]
   },
   {
