--- a/stockdemo.ipynb
+++ b/stockdemo.ipynb
@@ -137,6 +137,7 @@
    ],
    "source": [
     "#Step 4 - Plot the predictions!\n",
+    "print(len(model)),
     "predictions = lstm.predict_sequences_multiple(model, X_test, 50, 50)\n",
     "lstm.plot_results_multiple(predictions, y_test, 50)"
    ]
